--- a/locales/languages/hi-in.json
+++ b/locales/languages/hi-in.json
@@ -556,6 +556,7 @@
   "asset_overview": {
     "send_button": "भेजें",
     "buy_button": "खरीदें",
+    "tuli_button": "Tuli",
     "receive_button": "प्राप्त करें",
     "add_collectible_button": "जोड़ें",
     "info": "जानकारी",
