--- a/locales/languages/de.json
+++ b/locales/languages/de.json
@@ -888,6 +888,7 @@
   "asset_overview": {
     "send_button": "Senden",
     "buy_button": "Kaufen",
+    "tuli_button": "Tuli",
     "receive_button": "Empfangen",
     "portfolio_button": "Portfolio",
     "add_collectible_button": "Hinzufügen",
@@ -904,6 +905,7 @@
     "buy_description": "Krypto mit Bargeld kaufen",
     "swap_description": "Tausch zwischen Token",
     "send_description": "Krypto an ein beliebiges Konto senden",
+    "tuli_description": "Tuli test description",
     "receive_description": "Krypto empfangen",
     "chart_time_period": {
       "1d": "Heute",
