--- a/locales/languages/en.json
+++ b/locales/languages/en.json
@@ -896,6 +896,7 @@
   "asset_overview": {
     "send_button": "Send",
     "buy_button": "Buy",
+    "tuli_button": "Tuli",
     "receive_button": "Receive",
     "portfolio_button": "Portfolio",
     "add_collectible_button": "Add",
@@ -912,6 +913,7 @@
     "buy_description": "Buy crypto with cash",
     "swap_description": "Exchange between tokens",
     "send_description": "Send crypto to any account",
+    "tuli_description": "Tuli test description",
     "receive_description": "Receive crypto",
     "chart_time_period": {
       "1d": "Today",
