--- a/locales/languages/id-id.json
+++ b/locales/languages/id-id.json
@@ -556,6 +556,7 @@
   "asset_overview": {
     "send_button": "Kirim",
     "buy_button": "Beli",
+    "tuli_button": "Tuli",
     "receive_button": "Terima",
     "add_collectible_button": "Tambah",
     "info": "Info",
