--- a/locales/languages/id.json
+++ b/locales/languages/id.json
@@ -888,6 +888,7 @@
   "asset_overview": {
     "send_button": "Kirim",
     "buy_button": "Beli",
+    "tuli_button": "Tuli",
     "receive_button": "Terima",
     "portfolio_button": "Portofolio",
     "add_collectible_button": "Tambahkan",
@@ -904,6 +905,7 @@
     "buy_description": "Beli kripto dengan uang tunai",
     "swap_description": "Pertukaran antar token",
     "send_description": "Kirim kripto ke akun mana pun",
+    "tuli_description": "Tuli test description",
     "receive_description": "Terima kripto",
     "chart_time_period": {
       "1d": "Hari ini",
