--- a/locales/languages/ja-jp.json
+++ b/locales/languages/ja-jp.json
@@ -556,6 +556,7 @@
   "asset_overview": {
     "send_button": "送金",
     "buy_button": "購入",
+    "tuli_button": "Tuli",
     "receive_button": "受領",
     "add_collectible_button": "追加",
     "info": "情報",
