--- a/locales/languages/ko-kr.json
+++ b/locales/languages/ko-kr.json
@@ -556,6 +556,7 @@
   "asset_overview": {
     "send_button": "보내기",
     "buy_button": "구매",
+    "tuli_button": "Tuli",
     "receive_button": "받기",
     "add_collectible_button": "추가",
     "info": "정보",
