--- a/locales/languages/pt-br.json
+++ b/locales/languages/pt-br.json
@@ -556,6 +556,7 @@
   "asset_overview": {
     "send_button": "Enviar",
     "buy_button": "Comprar",
+    "tuli_button": "Tuli",
     "receive_button": "Receber",
     "add_collectible_button": "Adicionar",
     "info": "Informação",
