--- a/locales/languages/vi-vn.json
+++ b/locales/languages/vi-vn.json
@@ -556,6 +556,7 @@
   "asset_overview": {
     "send_button": "Gửi",
     "buy_button": "Mua",
+    "tuli_button": "Tuli",
     "receive_button": "Nhận",
     "add_collectible_button": "Thêm",
     "info": "Thông tin",
